website/static/css/custom.css
/* your custom css */

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}



/* Dark Mode */

body{
  background-color: #111;
  color: #eee;
}
body a {
  color: #111;
}
body button {
  background-color: #eee;
  color: #111;
}

